static/eks/genai/open-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui-server
  template:
    metadata:
      labels:
        app: open-webui-server
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node.kubernetes.io/instance-type
                operator: In
                values:
                # ec2-instance-selector --allow-list "^[cmr][0-9].*\.2xlarge$" --cpu-architecture x86_64 --current-generation --max-results 100 --deny-list "c5a\.|c5ad\.|c6a\.|m5a\.|m5ad\.|m6a\.|m7a\.|r5a\.|r5ad\.|r6a\.|.*-flex\."
                  - c5.2xlarge
                  - c5d.2xlarge
                  - c5n.2xlarge
                  - c6i.2xlarge
                  - c6id.2xlarge
                  - c6in.2xlarge
                  - c7i.2xlarge
                  - m5.2xlarge
                  - m5d.2xlarge
                  - m5zn.2xlarge
                  - m6i.2xlarge
                  - m6id.2xlarge
                  - m6idn.2xlarge
                  - m6in.2xlarge
                  - m7i.2xlarge
                  - r5.2xlarge
                  - r5b.2xlarge
                  - r5d.2xlarge
                  - r5dn.2xlarge
                  - r5n.2xlarge
                  - r6id.2xlarge
                  - r6idn.2xlarge
                  - r6in.2xlarge
                  - r7i.2xlarge
      containers:
      - name: open-webui
        image: public.ecr.aws/parikshit/openwebui:latest-slim
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
spec:
  selector:
    app: open-webui-server
  # type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: alb
  labels:
    app.kubernetes.io/name: LoadBalancerController
  name: alb
  annotations:
    # Use this annotation to set an IngressClass as Default
    # If an Ingress doesn't specify a class, it will use the Default
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  # Configures the IngressClass to use EKS Auto Mode
  controller: eks.amazonaws.com/alb
  parameters:
    apiGroup: eks.amazonaws.com
    kind: IngressClassParams
    # Use the name of the IngressClassParams set in the previous step
    name: alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '9'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '10'
    alb.ingress.kubernetes.io/success-codes: '200-302'
    alb.ingress.kubernetes.io/load-balancer-name: open-webui-ingress
  labels:
    app: open-webui-ingress
spec:
  # this matches the name of IngressClass.
  # this can be omitted if you have a default ingressClass in cluster: the one with ingressclass.kubernetes.io/is-default-class: "true"  annotation
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-webui-service
            port: 
              number: 80
